--- a/.github/workflows/sync_garmin_cn_to_garmin_global.yml
+++ b/.github/workflows/sync_garmin_cn_to_garmin_global.yml
@@ -4,9 +4,8 @@ on:
   workflow_dispatch:
   schedule:
     #  每6小时检查一次
-    # - cron: "0 23 * * *"
-    # 每天9点(东八区)更新
-    - cron: "0 10 * * *"
+    #- cron: "0 23 * * *"
+    - cron: "0 */8 * * *"
   push:
     branches:
       - main
